fix(spring): use get() instead of getFirst() and getLast() on List
The methods getFirst and getLast are from Java 21+, instead of current Java 17